syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/shccgxqp/happy_wallet/backend/pb";

message User {
  string username = 1;
  string password = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
